Fix Discovery sections display issue on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -110,7 +110,7 @@
 
 .FirstDisc1 {
   width: 60%;
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 
 .SecondDisc1 {
@@ -271,12 +271,6 @@
 }
 
 @media (max-width: 659px) {
-  /* .FirstDisc1 {
-    width: 60%;
-    border: 2px solid red;
-    display: block;
-  } */
-
   .LargeScreenBanner {
     display: none;
   }
@@ -372,7 +366,7 @@
   }
 }
 
-@media (max-width: 450px){
+@media (max-width: 450px) {
   .CatalogSection {
     margin-top: -120px;
     margin-left: 1rem;
@@ -413,11 +407,12 @@
   .CatalogSection {
     display: block;
     height: 100%;
-    margin-top: -150px;
+    margin-top: 0px;
     margin-left: 0px;
   }
 
   .catalogTitle {
+    margin-top: 50px;
   }
 
   .SecondDiscoveryTag {
